# maskell-skeleton

./: CHANGEME.cabal  package.yaml
nix/: shell.nix
nix/haskell/: default.nix  overlay.nix
