name:                <CHANGEME>
version:             0.1.0.0
homepage:            https://github.com/Maxfield-Chen/CHANGEME
license:             BSD3
license-file:        LICENSE
author:              Maxfield Chen
maintainer:          maxfieldchen@gmail.com
copyright:           2020 Maxfield Chen
category:            Application
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  exposed-modules: CHANGEME
  ghc-options: -O2 -threaded -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns
  build-depends:       base
                      ,text
                      ,containers
                      ,mtl
                      ,lens
                      ,transformers
                      ,sort
                      ,HUnit
                      ,Cabal
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite unit-tests
  main-is:       Main.hs
  hs-source-dirs: tst/unit
  type:          exitcode-stdio-1.0
  build-depends: base >= 4.7 && < 5
                ,HUnit == 1.6.0.0
                ,sort
                ,containers
                ,mtl
                ,lens
                ,transformers
                ,<CHANGEME>
  default-language: Haskell2010
